# batman

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: detector-bug.md  devnet-compatibility.md
.github/workflows/: ci.yml
artifacts/: compatibility-snapshot.gloas-devnet0.json  compatibility-snapshot.gloas-devnet5.json  devnet5-live-4way-diff.txt  devnet5-live-heads.json  devnet5-live-report.md  devnet5-live-smoke.json  devnet5-live-trace.json  live-3way-diff.txt  live-4way-diff.txt  live-heads.json  live-smoke.json  subset-live-report.md  subset-live-trace.json
batman_detector/: __init__.py  cli.py  compatibility.py  evidence_bundle.py  reporting.py  schemas.py  static_scan.py
batman_detector/bal/: __init__.py  canonical.py  codec.py  differential.py  fixtures.py  fuzzer.py  model.py
batman_detector/detectors/: __init__.py  bal_mixed_read_write_alias.py  base.py  common.py  (+1 more)
devnet/: README.md  endpoints.sh  glamsterdam-devnet.yaml  glamsterdam-devnet5.yaml
docs/: ARCHITECTURE.md  COMPATIBILITY_MATRIX.md  GITHUB_POLISH.md  GLAMSTERDAM_BAL_READINESS_REPORT.md  PUBLIC_EVIDENCE.md  ROADMAP_ISSUES.md  WHY_THIS_MATTERS.md  grant-application-answers.md  grant-proposal.md
schemas/: audit-target.schema.json  compatibility-snapshot.schema.json  finding.schema.json  fuzz-campaign.schema.json  ruleset.schema.json  trace.schema.json
tests/: __init__.py  test_bal_codec.py  test_bal_differential.py  test_batman_detector.py  test_grant_polish.py  test_harness.py  test_mixed_read_write_alias.py
(+14 files in other folders)
