[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "batman-detector"
version = "0.1.0"
description = "Glamsterdam/Gloas detector harness for Ethereum protocol security research"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Zorayr Saroyan" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
batman = "batman_detector.cli:main"

